--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,6 +8,7 @@
     "plugin:@typescript-eslint/recommended"
   ],
   "rules": {
-    "indent": ["warn", 4]
+    "indent": ["warn", 4],
+    "quotes": ["warn", "double"]
   }
 }
