--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "lint": "eslint ./src --ext .ts"
+    "lint": "eslint ./src --ext .ts",
+    "lint:fix": "eslint ./src --fix --ext .ts"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.20.0",
