--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,9 +10,7 @@
     "resolveJsonModule": true,
     "esModuleInterop": true,
     "noEmit": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "noImplicitReturns": true
+    "noImplicitReturns": true,
   },
   "include": ["src"]
 }
