--- a/.github/workflows/lint.workflow.yml
+++ b/.github/workflows/lint.workflow.yml
@@ -11,7 +11,7 @@ concurrency:
 
 jobs:
   typecheck_lint:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
