refactor: decouple drawing logic from game logic

--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,12 @@
 {
-  "overrides": [
-    {
-      "files": ["*.json"]
-    }
-  ]
+    "trailingComma": "all",
+    "tabWidth": 4,
+    "overrides": [
+        {
+            "files": ["*.json"],
+            "options": {
+                "tabWidth": 2
+            }
+        }
+    ]
 }
