--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@typescript-eslint/eslint-plugin": "^5.20.0",
     "@typescript-eslint/parser": "^5.20.0",
     "eslint": "^8.13.0",
+    "pixi.js": "^6.3.0",
     "typescript": "^4.5.4",
     "vite": "^2.9.0"
   }
