--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "lint:fix": "eslint ./src --fix --ext .ts"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.182",
     "@typescript-eslint/eslint-plugin": "^5.20.0",
     "@typescript-eslint/parser": "^5.20.0",
     "eslint": "^8.13.0",
+    "lodash": "^4.17.21",
     "pixi.js": "^6.3.0",
     "typescript": "^4.5.4",
     "vite": "^2.9.0"
