--- a/package.json
+++ b/package.json
@@ -7,16 +7,22 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "typecheck": "tsc",
+    "test": "mocha -r ts-node/register 'src/**/*.spec.ts'",
     "lint": "eslint ./src --ext .ts",
     "lint:fix": "eslint ./src --fix --ext .ts"
   },
   "devDependencies": {
+    "@types/chai": "^4.3.1",
     "@types/lodash": "^4.14.182",
+    "@types/mocha": "^9.1.1",
     "@typescript-eslint/eslint-plugin": "^5.20.0",
     "@typescript-eslint/parser": "^5.20.0",
+    "chai": "^4.3.6",
     "eslint": "^8.13.0",
     "lodash": "^4.17.21",
+    "mocha": "^9.2.2",
     "pixi.js": "^6.3.0",
+    "ts-node": "^10.7.0",
     "typescript": "^4.5.4",
     "vite": "^2.9.0"
   }
