--- a/.github/workflows/lint.workflow.yml
+++ b/.github/workflows/lint.workflow.yml
@@ -3,7 +3,7 @@ name: Typecheck & Lint
 on:
   workflow_dispatch:
   pull_request:
-    branches: ['main']
+    branches: ["main"]
 
 concurrency:
   cancel-in-progress: true
@@ -21,3 +21,4 @@ jobs:
       - run: npm ci --audit=false
       - run: npm run typecheck
       - run: npm run lint
+      - run: npm run test
