--- a/.prettierrc
+++ b/.prettierrc
@@ -7,6 +7,12 @@
             "options": {
                 "tabWidth": 2
             }
+        },
+        {
+            "files": ["*.yml"],
+            "options": {
+                "tabWidth": 2
+            }
         }
     ]
 }
