--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@typescript-eslint/parser": "^5.20.0",
     "chai": "^4.3.6",
     "eslint": "^8.13.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "lodash": "^4.17.21",
     "mocha": "^9.2.2",
     "pixi.js": "^6.3.0",
