chore: make eslint enforce prettier rules

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,14 +1,13 @@
 {
   "root": true,
   "parser": "@typescript-eslint/parser",
-  "plugins": ["@typescript-eslint"],
+  "plugins": ["@typescript-eslint", "prettier"],
   "extends": [
     "eslint:recommended",
     "plugin:@typescript-eslint/eslint-recommended",
     "plugin:@typescript-eslint/recommended"
   ],
   "rules": {
-    "indent": ["warn", 4],
-    "quotes": ["warn", "double"]
+    "prettier/prettier": ["warn"]
   }
 }
