--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,7 @@
 {
     "trailingComma": "all",
     "tabWidth": 4,
+    "endOfLine": "auto",
     "overrides": [
         {
             "files": ["*.json"],
