--- a/.github/workflows/release.workflow.yml
+++ b/.github/workflows/release.workflow.yml
@@ -1,18 +1,13 @@
 name: Make release
 
 on:
-  workflow_dispatch:
-    inputs:
-      version: 
-        type: string
-        description: patch, minor, major, or explicitly 1.2.3-whatever
-        default: minor
-        required: false
-      isPrerelease:
-        type: boolean
-        description: if it is prerelease
-        default: true
-        required: false
+  push:
+    # this should trigger the workflow
+    # ONLY when a tag is pushed, not branch
+    branches:
+      - "!*"
+    tags:
+      - "v*"
 
 concurrency:
   cancel-in-progress: true
@@ -22,9 +17,6 @@ jobs:
   make_release:
     runs-on: ubuntu-20.04
     steps:
-      - name: Print info
-        run: |
-          echo "Making ${{ github.event.inputs.version }} release"
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
         with:
@@ -34,35 +26,23 @@ jobs:
       - run: npm run typecheck
       - run: npm run lint
       - run: npm run test
+
+      - run: npm run build
+
       - name: Create changelog
         run: |
-          lastTag=$(git tag | tail -1)
+          lastTag=$(git tag | tail -2 | head -1)
+          newTag=$(git tag | tail -1)
           echo "Last version is $lastTag"
-          git log $lastTag..HEAD --oneline --no-decorate > CHANGELOG.md
+          echo "New version is $newTag"
+          git log $lastTag..$newTag --oneline --no-decorate > CHANGELOG.md
           cat CHANGELOG.md
-      - run: |
-          git config user.email github@github.com
-          git config user.name Github
-      - run: npm version ${{ github.event.inputs.version }}
-      - run: npm run build
-      - run: |
-          git push -f
-          git push -f --tags
-      - name: Get current version
-        id: version
-        run: |
-          version=v$(node -pe "require('./package.json')['version']")
-          echo "New version is $lastTag"
-          echo "::set-output name=version::$version"
+          zip release_$lastTag.zip dist/*
+
       - name: release
-        uses: actions/create-release@v1
-        id: create_release
+        uses: ncipollo/release-action@v1
         with:
-          draft: false
-          prerelease: ${{ github.event.inputs.isPrerelease }}
-          release_name: ${{ steps.version.outputs.version }}
-          tag_name: ${{ steps.version.outputs.version }}
-          body_path: CHANGELOG.md
-        env:
-          GITHUB_TOKEN: ${{ github.token }}
+          artifacts: "*.zip"
+          bodyFile: "CHANGELOG.md"
+          token: ${{ secrets.GITHUB_TOKEN }}
 
