Configure no-restricted-syntax to catch Math.random() calls
See:
https://www.webtips.dev/prevent-imports-with-eslint
https://astexplorer.net/

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,6 +8,13 @@
     "plugin:@typescript-eslint/recommended"
   ],
   "rules": {
-    "prettier/prettier": ["warn"]
+    "prettier/prettier": ["warn"],
+    "no-restricted-syntax": [
+      "error",
+      {
+        "selector": "CallExpression[callee.object.name=Math][callee.property.name=random]",
+        "message": "It is forbidden to call Math.random(). Use PRNG from utility/prng instead."
+      }
+    ]
   }
 }
