--- a/.github/workflows/release.workflow.yml
+++ b/.github/workflows/release.workflow.yml
@@ -17,7 +17,9 @@ jobs:
   make_release:
     runs-on: ubuntu-20.04
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
+        with:
+        fetch-depth: 0
       - uses: actions/setup-node@v2
         with:
           node-version: 16.x
