--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview",
     "typecheck": "tsc",
     "test": "mocha -r ts-node/register 'src/**/*.spec.ts'",
+    "coverage": "nyc --reporter=text mocha -r ts-node/register 'src/**/*.spec.ts'",
     "lint": "eslint ./src --ext .ts",
     "lint:fix": "eslint ./src --fix --ext .ts"
   },
@@ -22,6 +23,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "lodash": "^4.17.21",
     "mocha": "^9.2.2",
+    "nyc": "^15.1.0",
     "pixi.js": "^6.3.0",
     "ts-node": "^10.7.0",
     "typescript": "^4.5.4",
