INDEV: Audio integration

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "pixi.js": "^6.3.0",
     "ts-node": "^10.7.0",
     "typescript": "^4.5.4",
-    "vite": "^2.9.0"
+    "vite": "^2.9.0",
+    "howler": "^2.2.3"
   }
 }
