--- a/.github/workflows/lint.workflow.yml
+++ b/.github/workflows/lint.workflow.yml
@@ -21,4 +21,4 @@ jobs:
       - run: npm ci --audit=false
       - run: npm run typecheck
       - run: npm run lint
-      - run: npm run test
+      - run: npm run test:all
