--- a/package.json
+++ b/package.json
@@ -35,7 +35,11 @@
     "ts-mocha": "^10.0.0",
     "ts-node": "^10.7.0",
     "typescript": "^4.5.4",
-    "vite": "^2.9.0"
+    "vite": "^3.0.0"
+  },
+  "dependencies": {
+    "solid-js": "^1.4.1",
+    "vite-plugin-solid": "^2.2.6"
   },
   "mocha": {
     "watch-files": [
