--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "build": "tsc && vite build && cp ./RELEASE.md ./dist/README.md",
     "preview": "vite preview",
     "typecheck": "tsc",
-    "test": "mocha -r ts-node/register 'src/**/*.spec.ts'",
-    "coverage": "nyc --reporter=text mocha -r ts-node/register 'src/**/*.spec.ts'",
+    "test:all": "ts-mocha **/*.spec.ts",
+    "test": "ts-mocha",
+    "test:watch": "ts-mocha --watch",
+    "coverage": "nyc npm run test:all",
     "lint": "eslint ./src --ext .ts",
     "lint:fix": "eslint ./src --fix --ext .ts"
   },
@@ -22,11 +24,18 @@
     "eslint": "^8.13.0",
     "eslint-plugin-prettier": "^4.0.0",
     "lodash": "^4.17.21",
-    "mocha": "^9.2.2",
     "nyc": "^15.1.0",
     "pixi.js": "^6.3.0",
+    "ts-mocha": "^10.0.0",
     "ts-node": "^10.7.0",
     "typescript": "^4.5.4",
     "vite": "^2.9.0"
+  },
+  "mocha": {
+    "watch-files": ["**/*.ts"]
+  },
+  "nyc": {
+    "exclude": "**/*.spec.ts",
+    "reporter": "text"
   }
 }
