--- a/package.json
+++ b/package.json
@@ -23,14 +23,14 @@
     "chai": "^4.3.6",
     "eslint": "^8.13.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "howler": "^2.2.3",
     "lodash": "^4.17.21",
     "nyc": "^15.1.0",
     "pixi.js": "^6.3.0",
     "ts-mocha": "^10.0.0",
     "ts-node": "^10.7.0",
     "typescript": "^4.5.4",
-    "vite": "^2.9.0",
-    "howler": "^2.2.3"
+    "vite": "^2.9.0"
   },
   "mocha": {
     "watch-files": [
