--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "devDependencies": {
     "@types/chai": "^4.3.1",
+    "@types/howler": "^2.2.7",
     "@types/lodash": "^4.14.182",
     "@types/mocha": "^9.1.1",
     "@typescript-eslint/eslint-plugin": "^5.20.0",
