--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "devDependencies": {
     "@types/chai": "^4.3.1",
+    "@types/howler": "^2.2.7",
     "@types/lodash": "^4.14.182",
     "@types/mocha": "^9.1.1",
     "@typescript-eslint/eslint-plugin": "^5.20.0",
@@ -23,6 +24,8 @@
     "chai": "^4.3.6",
     "eslint": "^8.13.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "eventemitter3": "^3.1.2",
+    "howler": "^2.2.3",
     "lodash": "^4.17.21",
     "nyc": "^15.1.0",
     "ts-mocha": "^10.0.0",
