--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,6 +15,7 @@
         "selector": "CallExpression[callee.object.name=Math][callee.property.name=random]",
         "message": "It is forbidden to call Math.random(). Use PRNG from utility/prng instead."
       }
-    ]
+    ],
+    "@typescript-eslint/no-explicit-any": "off"
   }
 }
