Add release scripts

--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "test:watch": "ts-mocha --watch",
     "coverage": "nyc npm run test:all",
     "lint": "eslint ./src --ext .ts",
-    "lint:fix": "eslint ./src --fix --ext .ts"
+    "lint:fix": "eslint ./src --fix --ext .ts",
+    "release:major": "npm version minor && git push && git push --tags",
+    "release:minor": "npm version minor && git push && git push --tags",
+    "release:patch": "npm version minor && git push && git push --tags"
   },
   "devDependencies": {
     "@types/chai": "^4.3.1",
