--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "howler": "^2.2.3",
     "lodash": "^4.17.21",
     "nyc": "^15.1.0",
+    "socket.io-client": "^4.5.1",
     "ts-mocha": "^10.0.0",
     "ts-node": "^10.7.0",
     "typescript": "^4.5.4",
