--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "vite": "^3.0.0"
   },
   "dependencies": {
-    "solid-js": "^1.4.1",
+    "@gh0st-work/solid-js-router": "^1.4.4",
+    "solid-js": "^1.6.0",
     "vite-plugin-solid": "^2.2.6"
   },
   "mocha": {
