--- a/package.json
+++ b/package.json
@@ -26,16 +26,19 @@
     "@typescript-eslint/parser": "^5.20.0",
     "chai": "^4.3.6",
     "eslint": "^8.13.0",
-    "eslint-plugin-prettier": "^4.0.0",
     "eventemitter3": "^3.1.2",
     "howler": "^2.2.3",
     "lodash": "^4.17.21",
     "nyc": "^15.1.0",
     "socket.io-client": "^4.5.1",
     "ts-mocha": "^10.0.0",
-    "ts-node": "^10.7.0",
+    "ts-node": "^10.9.1",
     "typescript": "^4.5.4",
-    "vite": "^2.9.0"
+    "vite": "^3.0.0"
+  },
+  "dependencies": {
+    "solid-js": "^1.6.0",
+    "vite-plugin-solid": "^2.2.6"
   },
   "mocha": {
     "watch-files": [
