--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "scripts": {
       "lint": "eslint ./workspaces --ext .ts",
       "lint:fix": "eslint ./workspaces --fix --ext .ts",
-      "typecheck": "tsc",
+      "build:all": "npm run build --workspaces --if-present",
+      "typecheck:all": "npm run typecheck --workspaces --if-present",
+      "test:all": "npm run test:all --workspaces --if-present",
       "release:major": "npm version major && git push && git push --tags",
       "release:minor": "npm version minor && git push && git push --tags",
       "release:patch": "npm version patch && git push && git push --tags"
