--- a/workspaces/backend/package.json
+++ b/workspaces/backend/package.json
@@ -1,11 +1,10 @@
 {
   "name": "backend",
   "version": "0.0.0",
-  "main": "dist/index.js",
   "scripts": {
     "typecheck": "tsc --noEmit",
     "dev": "nodemon src/main.ts",
-    "build": "tsc",
+    "build": "tsc && cp package.json dist/package.json",
     "prod": "node dist/main"
   },
   "devDependencies": {
