--- a/.github/workflows/release.workflow.yml
+++ b/.github/workflows/release.workflow.yml
@@ -15,6 +15,9 @@ concurrency:
 
 jobs:
   make_release:
+    environment:
+      name: production
+      url: https://tinywars.onrender.com
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v3
@@ -25,8 +28,8 @@ jobs:
           node-version: 16.x
           cache: npm
       - run: npm ci --audit=false
-      - run: npm run typecheck
       - run: npm run lint
+      - run: npm run typecheck:all
       - run: npm run test:all
 
       - run: npm run build -w frontend
@@ -50,10 +53,14 @@ jobs:
           cp RELEASE.md release/RELEASE.md
           zip -r release_$currentTag.zip release/*
 
-      - name: release
+      - name: Release
         uses: ncipollo/release-action@v1
         with:
           artifacts: "*.zip"
           bodyFile: "CHANGELOG.md"
           token: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Trigger deploy on render.com
+        run: |
+          echo $(curl -X GET {{ secrets.RENDER_COM_DEPLOY_HOOK }})
 
