Serve frontend files from backend in prod mode

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "./workspaces/backend"
     ],
     "scripts": {
+      "prod": "npm -w backend prod",
       "lint": "eslint ./workspaces --ext .ts",
       "lint:fix": "eslint ./workspaces --fix --ext .ts",
       "build:all": "npm run build --workspaces --if-present",
