--- a/workspaces/backend/package.json
+++ b/workspaces/backend/package.json
@@ -7,16 +7,20 @@
     "build": "tsc && cp package.json dist/package.json",
     "prod": "node dist/main"
   },
+  "dependencies": {
+    "serve-handler": "^6.1.5",
+    "socket.io": "4.5"
+  },
   "devDependencies": {
     "@types/chai": "^4.3.1",
     "@types/mocha": "^9.1.1",
+    "@types/serve-handler": "^6.1.1",
     "@typescript-eslint/eslint-plugin": "^5.20.0",
     "@typescript-eslint/parser": "^5.20.0",
     "chai": "^4.3.6",
     "eslint": "^8.13.0",
     "eslint-plugin-prettier": "^4.0.0",
     "nodemon": "^2.0.18",
-    "socket.io": "4.5",
     "ts-node": "^10.7.0",
     "typescript": "^4.5.4"
   }
