--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
         "./workspaces/backend"
     ],
     "scripts": {
-      "prod": "npm -w backend prod",
+      "prod": "npm -w backend run prod",
       "lint": "eslint ./workspaces --ext .ts",
       "lint:fix": "eslint ./workspaces --fix --ext .ts",
       "build:all": "npm run build --workspaces --if-present",
