--- a/workspaces/backend/package.json
+++ b/workspaces/backend/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@types/chai": "^4.3.1",
     "@types/mocha": "^9.1.1",
+    "@types/node": "^18.11.13",
     "@types/serve-handler": "^6.1.1",
     "@typescript-eslint/eslint-plugin": "^5.20.0",
     "@typescript-eslint/parser": "^5.20.0",
