--- a/workspaces/backend/tsconfig.json
+++ b/workspaces/backend/tsconfig.json
@@ -6,6 +6,7 @@
     "module": "commonjs",
     "lib": ["ESNext", "DOM"],
     "moduleResolution": "Node",
+    "types": ["node"]
   },
   "include": ["src"]
 }
